# fge

./: Cargo.toml  README.md
assets/: curve_shader.wgsl
src/: axis_text.rs  curve_material.rs  gen_mesh.rs  main.rs  scaling.rs
src/gen_mesh/: gen_expr_mesh.rs  mod.rs
