[package]
name = "fge"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.6"
mathjit = { git = "https://github.com/AlexanderHarrison/mathjit" }

# FAST COMPILES
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

